@@ -5,6 +5,7 @@ Version 3.1.1 - SVN
  - Update upstream autoconf macro's fixing bashism.
  - Fix autoconf checks for libcURL and static linking.
  - Fix Makefile rules for building library objects.
+ - Workaround sorttable colspan bug and use stable sorting.
  - Small documentation fixes.
 
 Version 3.1.0 - 14 July 2010
